# rspack

./: '  .cursorignore  .editorconfig  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .mocharc.js  .npmrc  .nvmrc  .prettierignore  .prettierrc  .prettierrc.js  .taplo.toml  .typos.toml  .yarnrc.yml  :w  AGENTS.md  ANALYSIS_INDEX.md  ANALYSIS_SUMMARY.md  API_DESIGN.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CODE_SNIPPETS_REFERENCE.md  CODE_STYLE.md  COMMONJS_EXPORTS_DEPENDENCY_DIFF_ANALYSIS.md  COMMON_PATTERNS.md  CONCRETE_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  ENSURE_CHUNK_HANDLERS_DETAILED_RESEARCH.md  ENSURE_CHUNK_HANDLERS_FINDINGS.md  ENSURE_CHUNK_HANDLERS_INDEX.md  ENSURE_CHUNK_HANDLERS_QUICK_REFERENCE.md  GENERATE_ENTRY_STARTUP_CODE_SNIPPETS.md  GENERATE_ENTRY_STARTUP_INDEX.md  GENERATE_ENTRY_STARTUP_QUICK_REF.md  (+136 more)
crates/bench/: Cargo.toml  README.md
crates/bench/benches/: my_bench.rs
crates/bench/src/: main.rs  termcolorful.rs
crates/cargo-rst/: Cargo.toml  readme.md
crates/cargo-rst/src/: helper.rs  lib.rs  main.rs  record.rs  rst.rs  terminal_inline.rs  update.rs
crates/cargo-rst/tests/: main.rs
crates/chunk_spliter/: Cargo.toml
crates/chunk_spliter/src/: split_chunks.rs
crates/glob_to_regexp/: Cargo.toml
crates/glob_to_regexp/benches/: bench.rs
crates/glob_to_regexp/src/: lib.rs
crates/loader_runner/: Cargo.toml
crates/loader_runner/src/: lib.rs  plugin.rs  runner.rs
crates/loader_runner/tests/: load_runner.rs
crates/next-custom-transforms/: Cargo.toml
crates/next-custom-transforms/src/: chain_transforms.rs  linter.rs
crates/node_binding/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  binding.d.ts  binding.js  browser.js  build.rs  index.d.ts  napi-binding.d.ts  napirs.rc.json  package.json  rspack.wasi-browser.js  rspack.wasi.cjs  rspack.wasi.mjs  rust-toolchain.toml  test.js  test.mjs  tsconfig.json  tsconfig.type-test.json  wasi-worker-browser.mjs  wasi-worker.mjs  webcontainer-fallback.cjs
crates/node_binding/.cargo/: config.toml
crates/node_binding/examples/: basic.rs  serve.rs
crates/node_binding/scripts/: add-external-debug-info.js  banner.d.ts  build.js  dts-header.js  move-binding.js
crates/node_binding/src/: adapter.rs  allocator.rs  args.rs  asset.rs  async_dependency_block.rs  browserslist.rs  build_info.rs  chunk.rs  chunk_graph.rs  chunk_group.rs  clean_options.rs  codegen_result.rs  compiler.rs  context_module_factory.rs  define_symbols.rs  dependency.rs  dependency_block.rs  dependency_id.rs  diagnostic.rs  entry_dependency.rs  env.rs  error.rs  exports_info.rs  filename.rs  hook.rs  html.rs  lib.rs  loader.rs  location.rs  module.rs  module_graph.rs  module_graph_connection.rs  native_watcher.rs  next.rs  normal_module_factory.rs  options.rs  panic.rs  path_data.rs  resolver.rs  resolver_factory.rs  (+13 more)
crates/node_binding/tests/: binding.spec.ts  example.rs  index.js
crates/rspack/: Cargo.toml
crates/rspack/benches/: main.rs
crates/rspack/examples/: arco_pro.rs  basic.rs  build.rs  bundle.rs  rebuild.rs  serve.rs
crates/rspack/fixtures/: package.json
crates/rspack/src/: bundle.rs  bundle_context.rs  bundle_options.rs  bundler.rs  chunk.rs  external_module.rs  graph.rs  graph_container.rs  js_ext_module.rs  js_module.rs  lib.rs  main.rs  mark_box.rs  module.rs  module_graph.rs  module_graph_container.rs  plugin.rs  plugin_driver.rs  statement.rs  stats.rs  utils.rs  visitors.rs  worker.rs  worker2.rs
crates/rspack/tests/: .gitignore  after.json  alias.rs  basic.rs  check.js  defaults.rs  define.rs  diff.js  errors.rs  fixture.rs  fixtures.rs  generate.js  loader.rs  mod.rs  package.json  result.json  stats.rs  tidy.rs  utils.rs
crates/rspack_allocator/: Cargo.toml
crates/rspack_allocator/src/: lib.rs
crates/rspack_ast/: Cargo.toml
crates/rspack_ast/src/: css.rs  javascript.rs  lib.rs
crates/rspack_ast_viewer/: Cargo.toml  LICENSE  README.md
crates/rspack_ast_viewer/src/: main.rs
crates/rspack_base64/: Cargo.toml
crates/rspack_base64/src/: lib.rs
crates/rspack_binding_api/: Cargo.toml  README.md  build.rs
crates/rspack_binding_api/src/: allocator.rs  asset.rs  asset_condition.rs  async_dependency_block.rs  browserslist.rs  build_info.rs  chunk.rs  chunk_graph.rs  chunk_group.rs  clean_options.rs  codegen_result.rs  compilation_scoped_tsfn.rs  compiler.rs  compiler_scoped_tsfn.rs  context_module_factory.rs  define_symbols.rs  dependency.rs  diagnostic.rs  error.rs  exports_info.rs  filename.rs  html.rs  identifier.rs  js_regex.rs  lib.rs  location.rs  module.rs  module_graph.rs  module_graph_connection.rs  native_watcher.rs  normal_module_factory.rs  panic.rs  path_data.rs  platform.rs  resolver.rs  resolver_factory.rs  resource_data.rs  rsdoctor.rs  rslib.rs  rstest.rs  (+6 more)
crates/rspack_binding_build/: Cargo.toml  README.md
crates/rspack_binding_build/src/: lib.rs
crates/rspack_binding_builder/: Cargo.toml  README.md
crates/rspack_binding_builder/src/: lib.rs
crates/rspack_binding_builder_macros/: Cargo.toml  README.md
crates/rspack_binding_builder_macros/src/: lib.rs  register_plugin.rs
crates/rspack_binding_builder_testing/: .gitignore  Cargo.toml  binding.js  build.rs  index.d.ts  package.json
crates/rspack_binding_builder_testing/scripts/: build.js
crates/rspack_binding_builder_testing/src/: lib.rs
crates/rspack_binding_macros/: Cargo.toml
crates/rspack_binding_macros/src/: lib.rs  macros.rs
crates/rspack_binding_options/: Cargo.toml  build.rs
crates/rspack_binding_shared/: Cargo.toml
crates/rspack_binding_values/: Cargo.toml  build.rs
crates/rspack_browserslist/: Cargo.toml  README.md
crates/rspack_build/: Cargo.toml  README.md
crates/rspack_cacheable/: Cargo.toml
crates/rspack_cacheable_macros/: Cargo.toml
crates/rspack_cacheable_test/: Cargo.toml
crates/rspack_collections/: Cargo.toml
crates/rspack_core/: Cargo.toml
xtask/: Cargo.toml  README.md
xtask/benchmark/: Cargo.toml
xtask/release-check/: Cargo.toml
xtask/src/: bench_diff.rs  copy_three.rs  main.rs
(+19361 files in other folders)
