[workspace]
members  = ["crates/*", "tasks/*"]
resolver = "2"                     # See https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2

[workspace.package]
authors       = ["Rspack Teams"]
categories    = ["bundler", "development-tools", "web-programming"]
documentation = "https://rspack.dev/"
homepage      = "https://rspack.dev/"
license       = "MIT"
repository    = "https://github.com/web-infra-dev/rspack"

[workspace.metadata.cargo-shear]
ignored = [
  "swc",
  "rspack_plugin_dynamic",
  "rspack_builtin",
  "rspack_loader",
  "rspack_identifier",
  "rspack_testing",
  "rspack_plugin_emit",
  "rspack_collection",
  "rspack_deps_graph",
  "rspack_plugin_mini_css_extract",
  "rspack_binding",
  "rspack_plugin_merge",
  "rspack",
]
[workspace.dependencies]
anyhow             = { version = "1.0.95", features = ["backtrace"] }
anymap             = { package = "anymap3", version = "1.0.1" }
async-recursion    = { version = "1.1.1" }
async-trait        = { version = "0.1.84" }
bitflags           = { version = "2.6.0" }
browserslist-rs    = { version = "0.18.1" }
camino             = { version = "1.1.9" }
concat-string      = { version = "1.0.1" }
cow-utils          = { version = "0.1.3" }
css-module-lexer   = { version = "0.0.15" }
dashmap            = { version = "6.1.0" }
derive_more        = { version = "1.0.0" }
either             = { version = "1.13.0" }
enum-tag           = { version = "0.3.0" }
futures            = { version = "0.3.31" }
glob               = { version = "0.3.2" }
hashlink           = { version = "0.10.0" }
heck               = { version = "0.5.0" }
hex                = { version = "0.4.3" }
indexmap           = { version = "2.7.0" }
indoc              = { version = "2.0.5" }
insta              = { version = "1.42.0" }
itertools          = { version = "0.14.0" }
json               = { version = "0.12.4" }
lightningcss       = { version = "1.0.0-alpha.64", default-features = false, features = ["grid", "serde"] }
linked_hash_set    = { version = "0.1.5" }
mimalloc           = { version = "0.2.3", package = "mimalloc-rspack" }
mime_guess         = { version = "2.0.5" }
once_cell          = { version = "1.20.2" }
parcel_sourcemap   = { version = "2.1.1" }
paste              = { version = "1.0.15" }
path-clean         = { version = "1.0.1" }
pathdiff           = { version = "0.2.3" }
proc-macro2        = { version = "1.0.92" }
quote              = { version = "1.0.38" }
rayon              = { version = "1.10.0" }
regex              = { version = "1.11.1" }
ropey              = { version = "1.6.1" }
rspack_resolver    = { features = ["package_json_raw_json_api"], version = "0.5.6" }
rspack_sources     = { version = "0.4.8" }
rustc-hash         = { version = "2.1.0" }
scopeguard         = "1.2.0"
serde              = { version = "1.0.217" }
serde_json         = { version = "1.0.134" }
sha2               = { version = "0.10.8" }
simd-json          = { version = "0.14.3" }
smol_str           = { version = "0.3.0" }
stacker            = { version = "0.1.17" }
sugar_path         = { version = "1.2.0", features = ["cached_current_dir"] }
syn                = { version = "2.0.95" }
tokio              = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
tracing            = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.19" }
unicase            = { version = "2.8.1" }
url                = { version = "2.5.4" }
urlencoding        = { version = "2.1.3" }
ustr               = { package = "ustr-fxhash", version = "1.0.1" }
xxhash-rust        = { version = "0.8.14" }

# Pinned
napi        = { version = "3.0.0-alpha.33" }
napi-build  = { version = "2.1.6" }
napi-derive = { version = "3.0.0-alpha.29" }

# Serialize and Deserialize
inventory = { version = "0.3.17" }
rkyv      = { version = "=0.8.8" }

# Must be pinned with the same swc versions
swc                 = { version = "=22.0.0" }
swc_config          = { version = "=2.0.0" }
swc_core            = { version = "=23.2.0", default-features = false, features = ["parallel_rayon"] }
swc_ecma_minifier   = { version = "=17.0.0", default-features = false }
swc_error_reporters = { version = "=11.0.0" }
swc_html            = { version = "=17.0.0" }
swc_html_minifier   = { version = "=17.0.0", default-features = false }
swc_node_comments   = { version = "=9.0.0" }

pnp = { version = "0.9.0" }

rspack_dojang = { version = "0.1.11" }


# all rspack workspace dependencies
rspack                                 = { version = "0.2.0", path = "crates/rspack" }
rspack_allocator                       = { version = "0.2.0", path = "crates/rspack_allocator" }
rspack_base64                          = { version = "0.2.0", path = "crates/rspack_base64" }
rspack_binding                         = { version = "0.2.0", path = "crates/rspack_binding" }
rspack_browserslist                    = { version = "0.2.0", path = "crates/rspack_browserslist" }
rspack_builtin                         = { version = "0.2.0", path = "crates/rspack_builtin" }
rspack_cacheable                       = { version = "0.2.0", path = "crates/rspack_cacheable" }
rspack_collection                      = { version = "0.2.0", path = "crates/rspack_collection" }
rspack_collections                     = { version = "0.2.0", path = "crates/rspack_collections" }
rspack_core                            = { version = "0.2.0", path = "crates/rspack_core" }
rspack_deps_graph                      = { version = "0.2.0", path = "crates/rspack_deps_graph" }
rspack_error                           = { version = "0.2.0", path = "crates/rspack_error" }
rspack_fs                              = { version = "0.2.0", path = "crates/rspack_fs" }
rspack_futures                         = { version = "0.2.0", path = "crates/rspack_futures" }
rspack_hash                            = { version = "0.2.0", path = "crates/rspack_hash" }
rspack_hook                            = { version = "0.2.0", path = "crates/rspack_hook" }
rspack_identifier                      = { version = "0.2.0", path = "crates/rspack_identifier" }
rspack_ids                             = { version = "0.2.0", path = "crates/rspack_ids" }
rspack_javascript_compiler             = { version = "*", path = "crates/rspack_javascript_compiler" }
rspack_loader                          = { version = "0.2.0", path = "crates/rspack_loader" }
rspack_loader_lightningcss             = { version = "0.2.0", path = "crates/rspack_loader_lightningcss" }
rspack_loader_preact_refresh           = { version = "0.2.0", path = "crates/rspack_loader_preact_refresh" }
rspack_loader_react_refresh            = { version = "0.2.0", path = "crates/rspack_loader_react_refresh" }
rspack_loader_runner                   = { version = "0.2.0", path = "crates/rspack_loader_runner" }
rspack_loader_swc                      = { version = "0.2.0", path = "crates/rspack_loader_swc" }
rspack_loader_testing                  = { version = "0.2.0", path = "crates/rspack_loader_testing" }
rspack_macros                          = { version = "0.2.0", path = "crates/rspack_macros" }
rspack_napi                            = { version = "0.2.0", path = "crates/rspack_napi" }
rspack_napi_macros                     = { version = "0.2.0", path = "crates/rspack_napi_macros" }
rspack_paths                           = { version = "0.2.0", path = "crates/rspack_paths" }
rspack_plugin_asset                    = { version = "0.2.0", path = "crates/rspack_plugin_asset" }
rspack_plugin_banner                   = { version = "0.2.0", path = "crates/rspack_plugin_banner" }
rspack_plugin_circular_dependencies    = { version = "0.2.0", path = "crates/rspack_plugin_circular_dependencies" }
rspack_plugin_context_replacement      = { version = "0.2.0", path = "crates/rspack_plugin_context_replacement" }
rspack_plugin_copy                     = { version = "0.2.0", path = "crates/rspack_plugin_copy" }
rspack_plugin_css                      = { version = "0.2.0", path = "crates/rspack_plugin_css" }
rspack_plugin_css_chunking             = { version = "0.2.0", path = "crates/rspack_plugin_css_chunking" }
rspack_plugin_devtool                  = { version = "0.2.0", path = "crates/rspack_plugin_devtool" }
rspack_plugin_dll                      = { version = "0.2.0", path = "crates/rspack_plugin_dll" }
rspack_plugin_dynamic                  = { version = "0.2.0", path = "crates/rspack_plugin_dynamic" }
rspack_plugin_dynamic_entry            = { version = "0.2.0", path = "crates/rspack_plugin_dynamic_entry" }
rspack_plugin_emit                     = { version = "0.2.0", path = "crates/rspack_plugin_emit" }
rspack_plugin_ensure_chunk_conditions  = { version = "0.2.0", path = "crates/rspack_plugin_ensure_chunk_conditions" }
rspack_plugin_entry                    = { version = "0.2.0", path = "crates/rspack_plugin_entry" }
rspack_plugin_externals                = { version = "0.2.0", path = "crates/rspack_plugin_externals" }
rspack_plugin_extract_css              = { version = "0.2.0", path = "crates/rspack_plugin_extract_css" }
rspack_plugin_hmr                      = { version = "0.2.0", path = "crates/rspack_plugin_hmr" }
rspack_plugin_html                     = { version = "0.2.0", path = "crates/rspack_plugin_html" }
rspack_plugin_ignore                   = { version = "0.2.0", path = "crates/rspack_plugin_ignore" }
rspack_plugin_javascript               = { version = "0.2.0", path = "crates/rspack_plugin_javascript" }
rspack_plugin_json                     = { version = "0.2.0", path = "crates/rspack_plugin_json" }
rspack_plugin_lazy_compilation         = { version = "0.2.0", path = "crates/rspack_plugin_lazy_compilation" }
rspack_plugin_library                  = { version = "0.2.0", path = "crates/rspack_plugin_library" }
rspack_plugin_lightning_css_minimizer  = { version = "0.2.0", path = "crates/rspack_plugin_lightning_css_minimizer" }
rspack_plugin_limit_chunk_count        = { version = "0.2.0", path = "crates/rspack_plugin_limit_chunk_count" }
rspack_plugin_merge                    = { version = "0.2.0", path = "crates/rspack_plugin_merge" }
rspack_plugin_merge_duplicate_chunks   = { version = "0.2.0", path = "crates/rspack_plugin_merge_duplicate_chunks" }
rspack_plugin_mf                       = { version = "0.2.0", path = "crates/rspack_plugin_mf" }
rspack_plugin_mini_css_extract         = { version = "0.2.0", path = "crates/rspack_plugin_mini_css_extract" }
rspack_plugin_module_info_header       = { version = "0.2.0", path = "crates/rspack_plugin_module_info_header" }
rspack_plugin_no_emit_on_errors        = { version = "0.2.0", path = "crates/rspack_plugin_no_emit_on_errors" }
rspack_plugin_progress                 = { version = "0.2.0", path = "crates/rspack_plugin_progress" }
rspack_plugin_real_content_hash        = { version = "0.2.0", path = "crates/rspack_plugin_real_content_hash" }
rspack_plugin_remove_duplicate_modules = { version = "0.2.0", path = "crates/rspack_plugin_remove_duplicate_modules" }
rspack_plugin_remove_empty_chunks      = { version = "0.2.0", path = "crates/rspack_plugin_remove_empty_chunks" }
rspack_plugin_rsdoctor                 = { version = "0.2.0", path = "crates/rspack_plugin_rsdoctor" }
rspack_plugin_rstest                   = { version = "0.2.0", path = "crates/rspack_plugin_rstest" }
rspack_plugin_runtime                  = { version = "0.2.0", path = "crates/rspack_plugin_runtime" }
rspack_plugin_runtime_chunk            = { version = "0.2.0", path = "crates/rspack_plugin_runtime_chunk" }
rspack_plugin_schemes                  = { version = "0.2.0", path = "crates/rspack_plugin_schemes" }
rspack_plugin_size_limits              = { version = "0.2.0", path = "crates/rspack_plugin_size_limits" }
rspack_plugin_split_chunks             = { version = "0.2.0", path = "crates/rspack_plugin_split_chunks" }
rspack_plugin_sri                      = { version = "0.2.0", path = "crates/rspack_plugin_sri" }
rspack_plugin_swc_js_minimizer         = { version = "0.2.0", path = "crates/rspack_plugin_swc_js_minimizer" }
rspack_plugin_warn_sensitive_module    = { version = "0.2.0", path = "crates/rspack_plugin_warn_sensitive_module" }
rspack_plugin_wasm                     = { version = "0.2.0", path = "crates/rspack_plugin_wasm" }
rspack_plugin_web_worker_template      = { version = "0.2.0", path = "crates/rspack_plugin_web_worker_template" }
rspack_plugin_worker                   = { version = "0.2.0", path = "crates/rspack_plugin_worker" }
rspack_regex                           = { version = "0.2.0", path = "crates/rspack_regex" }
rspack_storage                         = { version = "0.2.0", path = "crates/rspack_storage" }
rspack_swc_plugin_import               = { version = "0.2.0", path = "crates/swc_plugin_import" }
rspack_testing                         = { version = "0.2.0", path = "crates/rspack_testing" }
rspack_tracing                         = { version = "0.2.0", path = "crates/rspack_tracing" }
rspack_tracing_chrome                  = { version = "0.2.0", path = "crates/rspack_tracing_chrome" }
rspack_util                            = { version = "0.2.0", path = "crates/rspack_util" }

[workspace.metadata.release]
rate-limit = { existing-packages = 70, new-packages = 70 }

# Follow servo's style https://github.com/servo/servo/blob/c95bd9d052d7eae378d31c5be0f92669cadb2c85/Cargo.toml#L175

# This is for local development
[profile.dev]
codegen-units = 16
debug         = 2       # debug build will cause runtime panic if codegen-unints is default
incremental   = true
panic         = "abort"

# This is for release build for users
[profile.release]
codegen-units = 1
debug         = false
# Performs “fat” LTO which attempts to perform optimizations across all crates within the dependency graph.
lto       = "fat"
opt-level = 3
panic     = "abort"
strip     = true

[profile.release.package]

[profile.release.package.regex-syntax]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_module]
opt-level = "s"

[profile.release.package.handlebars]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_proposal]
opt-level = "s"

[profile.release.package.swc_ecma_compat_es2022]
opt-level = "s"

[profile.release.package.rspack_plugin_rsdoctor]
opt-level = "s"

[profile.release.package.swc_ecma_compat_es3]
opt-level = "s"


[profile.release.package.backtrace]
opt-level = "s"

[profile.release.package.aho-corasick]
opt-level = "s"

[profile.release.package.swc_ecma_lints]
opt-level = "s"

[profile.release.package.miette]
opt-level = "s"

[profile.release.package.pnp]
opt-level = "s"


[profile.release.package.fancy-regex]
opt-level = "s"

[profile.release.package.swc_ecma_loader]
opt-level = "s"

[profile.release.package.chrono]
opt-level = "s"

[profile.release.package.once_cell]
opt-level = "s"

[profile.release.package.rustc-demangle]
opt-level = "s"

[profile.release.package.regress]
opt-level = "s"

[profile.release.package.indicatif]
opt-level = "s"

[profile.release.package.gimli]
opt-level = "s"

[profile.release.package.regex]
opt-level = "s"

[profile.release.package.rspack_error]
opt-level = "s"


[profile.release.package.rspack_plugin_progress]
opt-level = "s"

[profile.release.package.num-bigint]
opt-level = "s"


[profile.release.package.swc_error_reporters]
opt-level = "s"

[profile.release.package.http]
opt-level = "s"

[profile.release.package.idna]
opt-level = "s"

[profile.release.package.addr2line]
opt-level = "s"

[profile.release.package.color-backtrace]
opt-level = "s"

[profile.release.package.glob]
opt-level = "s"

[profile.release.package.wasmparser]
opt-level = "s"

[profile.release.package.jsonc-parser]
opt-level = "s"


[profile.release.package.textwrap]
opt-level = "s"

[profile.release.package.console]
opt-level = "s"

[profile.release.package.hashlink]
opt-level = "s"


[profile.release.package.swc_ecma_ext_transforms]
opt-level = "s"


[profile.release.package.icu_normalizer]
opt-level = "s"

[profile.release.package.rspack_plugin_banner]
opt-level = "s"

[profile.release.package.anyhow]
opt-level = "s"

[profile.release.package.oneshot]
opt-level = "s"

# This is for CI build based on release but with faster build time
[profile.ci]
codegen-units = 256
inherits      = "release"
lto           = false
## reduce little optimization to reduce build time
opt-level = 2

# This is for production for profiling production build
[profile.profiling]
debug           = "limited"
inherits        = "release"
lto             = "thin"
split-debuginfo = "off"
strip           = false

[profile.release-wasi]
codegen-units = 16
debug         = 'full'
inherits      = "release"
lto           = "thin"
opt-level     = "s"
strip         = "none"


# the following lints rules are from https://github.com/biomejs/biome/blob/4bd3d6f09642952ee14445ed56af81a73796cea1/Cargo.toml#L7C1-L75C1
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code                              = "warn"
trivial_numeric_casts                  = "warn"
unused_import_braces                   = "warn"
unused_lifetimes                       = "warn"
unused_macro_rules                     = "warn"

[workspace.lints.clippy]
cargo_common_metadata   = "allow"
empty_docs              = "allow" # there are some false positives inside biome_wasm
multiple_crate_versions = "allow"

# pedantic
checked_conversions          = "warn"
cloned_instead_of_copied     = "warn"
copy_iterator                = "warn"
dbg_macro                    = "warn"
doc_link_with_quotes         = "warn"
empty_enum                   = "warn"
expl_impl_clone_on_copy      = "warn"
explicit_into_iter_loop      = "warn"
filter_map_next              = "warn"
flat_map_option              = "warn"
fn_params_excessive_bools    = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone               = "warn"
# not sure whether it's necessary
# implicit_hasher              = "warn"
index_refutable_slice        = "warn"
inefficient_to_string        = "warn"
invalid_upcast_comparisons   = "warn"
iter_not_returning_iterator  = "warn"
large_stack_arrays           = "warn"
large_types_passed_by_value  = "warn"
macro_use_imports            = "warn"
manual_ok_or                 = "warn"
manual_string_new            = "warn"
map_flatten                  = "warn"
map_unwrap_or                = "warn"
mismatching_type_param_order = "warn"
mut_mut                      = "warn"
naive_bytecount              = "warn"
needless_bitwise_bool        = "warn"
needless_continue            = "warn"
needless_for_each            = "warn"
no_effect_underscore_binding = "warn"
ref_binding_to_reference     = "warn"
ref_option_ref               = "warn"
stable_sort_primitive        = "warn"
uninlined_format_args        = "warn"
unnecessary_box_returns      = "warn"
unnecessary_join             = "warn"
unnested_or_patterns         = "warn"
unreadable_literal           = "warn"
verbose_bit_mask             = "warn"
zero_sized_map_values        = "warn"

# restriction
empty_drop                      = "warn"
float_cmp_const                 = "warn"
get_unwrap                      = "warn"
infinite_loop                   = "warn"
lossy_float_literal             = "warn"
rc_buffer                       = "warn"
rc_mutex                        = "warn"
rest_pat_in_fully_bound_structs = "warn"
verbose_file_reads              = "warn"
# https://github.com/rustwasm/wasm-bindgen/issues/3944
#mem_forget                      = "warn"
